# aae-llm-eval

./: .gitignore  README.md  pyproject.toml
aae_llm_eval/: paths.py
aae_llm_eval/coraal_data/: coraal_metadata.py  coraal_preprocessing.py  coraal_sampling.py  coraal_stats.py
